scrollbar issues

--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -4,7 +4,6 @@ html {
 	color: #1B1C21;
 	font-family: TT Lakes, sans-serif;
 	box-sizing: border-box;
-	overflow-y: scroll;
 }
 * {
 	box-sizing: inherit;
@@ -23,6 +22,9 @@ html {
 }
 body {
 	background-color: #F8F8F8;
+}
+body::-webkit-scrollbar {
+	width: 0;
 }
 a {
 	border: none;
@@ -72,6 +74,7 @@ textarea {
 	flex-direction: column;
 	justify-content: space-between;
 	min-height: 100vh;
+	overflow-y: auto;
 }
 .right-container--overlaid {
     max-height: 100vh;
